--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tiptap/core": "^2.14.0",
+    "@tiptap/extension-bullet-list": "^2.14.0",
+    "@tiptap/extension-font-family": "^2.14.0",
+    "@tiptap/extension-link": "^2.14.0",
+    "@tiptap/extension-ordered-list": "^2.14.0",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "bootstrap": "^5.3.6",
     "jwt-decode": "^4.0.0",
     "next": "15.3.3",
