--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
     "bootstrap": "^5.3.6",
+    "dompurify": "^3.2.6",
     "generate-password-ts": "^1.6.5",
     "jwt-decode": "^4.0.0",
     "next": "15.3.3",
